# aero

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  clean_logs.sh  collect_logs.sh  committee.yaml  config.ini  config.yaml  exp.sh  freeport.sh  generate_network.sh  install.sh  install_tools.sh  jaeger.sh  kill.sh  modify_script.py  networ_committee.yaml  network.yaml  network_committee.yaml  process_logs.sh  rm_logs.sh  run.sh  run_circuit.sh  run_committee.sh  run_server.sh  run_verifier.sh  server.sh  test.sh
atom/: Cargo.toml
atom/benches/baseline/: constraints.rs  groth16.rs
atom/benches/offline/: constraints.rs
atom/benches/online/: constraints.rs  groth16.rs
atom/src/: aggregator_offline.rs  aggregator_online.rs  back_server.rs  board.rs  client.rs  committee_offline.rs  committee_online.rs  committee_reshare.rs  data_generator.rs  light_client.rs  server.rs  verifier.rs
atom/src/common/: board_service.rs  committee_service.rs  mod.rs  server_service.rs
atom/src/common/aggregation/: merkle.rs  mod.rs
atom/src/rlwe/: context.rs  mod.rs  rand_poly.rs
atom/src/util/: config.rs
atom/src/zksnark/: mod.rs  offline.rs  online.rs
baseline/: Cargo.toml
baseline/src/: back_server.rs  board.rs  client.rs  data_generator.rs  light_client.rs  server.rs
baseline/src/common/: server_service.rs
baseline/src/common/aggregation/: mod.rs  node.rs
baseline/src/rlwe/: rand_poly.rs
benches/: groth16.rs  rlwe.rs
benches/baseline/: constraints.rs
benches/offline/: constraints.rs
benches/online/: constraints.rs
benchmarks/polynomial/: Makefile  main.cpp  temp.input  test  test.py
data/: aws01.pem  committee.txt  encryption  id_rsa  id_rsa.pub  proof  pvk  vk.txt
federated_learning/: emnist_cnn.py  emnist_dnn.py
figures/: plot.plt
figures/gp/: barchart  barchart-stacked  barchart2  committee_cpu_vs_failure_probability.sh  committee_cpu_vs_model_size.sh  committee_network_vs_failure_probability.sh  committee_network_vs_model_size.sh  plot.plt  prover_cpu_vs_model_size.sh  prover_network_vs_model_size.sh  verifier_cpu_vs_fraction.sh  verifier_cpu_vs_model_size.sh  verifier_network_vs_fraction.sh  verifier_network_vs_model_size.sh
lib/committee/: crt.py  main.py  player.py  rdp_accountant.py  shamir.py
lib/encryption/: CMakeLists.txt  encryption.cpp  ntt.py  poly.py  process_log.py
lib/groth16/: Cargo.toml  online.output  run.sh
lib/groth16/examples/baseline/: constraints.rs  groth16.rs
lib/groth16/examples/offline/: constraints.rs  groth16.rs  num.rs
lib/groth16/examples/online/: constraints.rs  constraints_original.rs  groth16.rs
lib/groth16/src/: prover.rs  r1cs_to_qap.rs
lib/honeycrisp/Cert-Store/: Player0.crt  Player0.key  Player1.crt  Player1.key  Player10.crt  Player10.key  Player11.crt  Player11.key  Player12.crt  Player12.key  Player13.crt  Player13.key  Player14.crt  Player14.key  Player15.crt  Player15.key  Player16.crt  Player16.key  Player17.crt  Player17.key  Player18.crt  Player18.key  Player19.crt  Player19.key  Player2.crt  Player2.key  Player20.crt  Player20.key  Player21.crt  Player21.key  Player22.crt  Player22.key  Player23.crt  Player23.key  Player24.crt  Player24.key  Player25.crt  Player25.key  Player26.crt  Player26.key  (+42 more)
lib/honeycrisp/Cert-Store/csr/: Player0.csr  Player1.csr  Player10.csr  Player11.csr  Player12.csr  Player13.csr  Player14.csr  Player15.csr  Player16.csr  Player17.csr  Player18.csr  Player19.csr  Player2.csr  Player20.csr  Player21.csr  Player22.csr  Player23.csr  Player24.csr  Player25.csr  Player26.csr  Player27.csr  Player28.csr  Player29.csr  Player3.csr  Player30.csr  Player31.csr  Player32.csr  Player33.csr  Player34.csr  Player35.csr  Player36.csr  Player37.csr  Player38.csr  Player39.csr  Player4.csr  Player5.csr  (+4 more)
lib/honeycrisp/config/: genSetupOptions.sh
lib/honeycrisp/source/: benchmark.sh  decrypt.mpc
lib/honeycrisp/test/: decrypt.sh  incr.sh  keygen.sh
lib/neptune/: Cargo.toml
lib/neptune/src/: bls381num.rs  circuit.rs  lib.rs
log/02_04_09/: config.ini
log/02_35_37/: config.ini
log/03_45_57/: config.ini
log/06_08_45/: config.ini
log/09_57_56/: config.ini
log/ct10/: config.ini
logs/atom_prob_10/: config.yaml
logs/atom_prob_5/: config.yaml
logs/atomw_ct_1/: config.yaml
logs/atomw_ct_100/: config.yaml
logs/atomw_ct_1000/: config.yaml
logs/atomw_prob_100/: config.yaml
logs/atomw_prob_2/: config.yaml
logs/atomw_prob_4/: config.yaml
logs/atomw_prob_50/: config.yaml
logs/baseline_ct_10/: config.yaml
logs/baseline_ct_342/: config.yaml
logs/baseline_ct_50/: config.yaml
logs/committee_28_1/: config.yaml
logs/committee_35_35/: config.yaml
logs/committee_38_1/: config.yaml
logs/committee_38_12/: config.yaml
logs/committee_42_1/: config.yaml
logs/committee_55_1/: config.yaml
logs/old/atom_ct_1/: config.yaml
logs/old/atom_ct_100/: config.yaml
logs/old/atomw_ct_100/: config.yaml
logs/old/atomw_ct_342/: config.yaml
logs/old/atomw_ct_50/: config.yaml
logs/reshare/: process_logs.sh
logs/reshare_35/: reshare_proof0.txt
scripts/: .gitignore  committee.bak  committee.txt  exp.sh  iinstall_hhoneycrisp.sh  install.sh  install_honeycrisp.sh  kill.sh  network.sh  network_committee.sh  process.sh  pssh_install.sh  run.sh  run_decrypt.sh  run_keygen.sh  ssh_back_data.sh  ssh_restore_data.sh  ssh_run_decrypt.sh  ssh_run_keygen.sh  update_honeycrisp.sh  worker.txt
src/: aggregator_offline.rs  aggregator_online.rs  back_server.rs  board.rs  cipher.rs  client.cpp  client.h  client.rs  committee_offline.rs  committee_online.rs  data_generator.rs  lib.rs  light_client.rs  main.cpp  merkle.cpp  merkle.h  server.h  server.rs  server_pit.rs  server_service.rs  verify.rs
src/common/: board_service.rs  cipher.rs  mod.rs  server_service.rs
src/common/aggregation/: merkle.rs  mod.rs  node.rs
src/proof/: mod.rs
src/proof_generation/: constraints.rs  proof.rs
src/rlwe/: context.rs  mod.rs
src/util/: config.rs  log.rs
src/utils/: log_utils.cpp  log_utils.h
src/zksnark/: constraints.rs  mod.rs  offline.rs  online.rs  online_batch.rs.bak
(+1 files in other folders)
