[package]
name = "quail"
version = "0.0.1"
edition = "2018"

[dependencies]
ark-groth16 = {path="./lib/groth16",version="0.2.0",features = ["parallel"]}
ark-ff = { version = "^0.2.0", default-features = false }
ark-std = { version = "^0.2.0", default-features = false }
ark-ec = { version = "^0.2.0", default-features = false }
ark-bls12-381 = { version = "^0.2.0", default-features = false, features = ["curve"] }
ark-relations = { version = "^0.2.0", default-features = false }
ark-serialize= { version = "^0.2.0", default-features = false }

log = "0.4"
simplelog = "^0.10.0"
config = "0.11"

merkle_light = {version="^0.3.1", path="lib/merkle_light-0.3.1/merkle"}
rust-crypto = "^0.2"
rsa = {version="0.5.0",features=["serde"]}
rand = "0.8.0"
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0" }
tarpc = { version = "0.26", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-serde = { version = "0.8", features = ["bincode","json"] }
bincode = "1.3.3"
tracing = { version = "0.1" }
tracing-opentelemetry = "0.15"
tracing-subscriber = "0.2"

#zmq = "0.9"
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "groth16"
harness = false

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

#[[bin]]
#name = "board"
#path = "src/board.rs"

[features]
default = [ "print-trace"]
json = []
print-trace = [ "ark-std/print-trace" ]


