[package]
name = "quail"
version = "0.0.1"
edition = "2018"

[dependencies]
ark-groth16 = {path="../lib/groth16",version="0.2.0",features = ["parallel"]}
ark-ff = { version = "^0.2.0", default-features = false }
ark-std = { version = "^0.2.0", default-features = false }
ark-ec = { version = "^0.2.0", default-features = false }
ark-bls12-381 = { version = "^0.2.0", default-features = false, features = ["curve"] }
ark-relations = { version = "^0.2.0", default-features = false }
ark-serialize= { version = "^0.2.0", default-features = false }

config = "0.11"

merkle_light = {version="^0.3.1", path="../lib/merkle_light-0.3.1/merkle"}
rust-crypto = "^0.2"
rsa = {version="0.5.0",features=["serde"]}
rand = "0.8.0"
rand_distr="0.4.2"
rayon = "1.5"
blake3 = "1.0.0"
cancellable-timer = "0.1.0"

Cupcake = {version="0.2.1",features=["bench"]}
ring-algorithm = "0.4.0"

anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0" }
tarpc = { version = "0.27", features = ["full"] }
#tokio = { version = "1.13.0", features = ["macros", "net", "rt-multi-thread","sync"] }
tokio = { version = "1.13.0", features = ["full"]}
tokio-serde = { version = "0.8", features = ["bincode","json"] }
bincode = "1.3.3"
cpu-time = "1.0.0"

#log = "0.4"
tracing = { version = "0.1.28" }
tracing-opentelemetry = "0.15"
tracing-subscriber = "0.2"
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }

#zmq = "0.9"
[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "board"
path = "src/board.rs"

[[bin]]
name = "committee_offline"
path = "src/committee_offline.rs"

[[bin]]
name = "committee_online"
path = "src/committee_online.rs"

[[bin]]
name = "aggregator_offline"
path = "src/aggregator_offline.rs"

[[bin]]
name = "aggregator_online"
path = "src/aggregator_online.rs"

[[bin]]
name = "light_client"
path = "src/light_client.rs"

[[bin]]
name = "data_generator"
path = "src/data_generator.rs"

[features]
default = [ "print-trace","hashfn_blake3","parallel"]
hashfn_blake3=[]
json = []
print-trace = [ "ark-std/print-trace" ]
parallel = [ "ark-groth16/parallel" ]

[profile.release]
panic = 'abort'